baml_language/crates/baml_tests/snapshots/diagnostic_errors/numeric_invariance/baml_tests__diagnostic_errors__numeric_invariance__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.IntToFloat(x: int) -> float throws never {
  { : int
    x : int
  }
  !! 522..523: type mismatch: expected float, got int
}
function user.IntLiteralToFloat() -> float throws never {
  { : 1
    1 : 1
  }
  !! 651..652: type mismatch: expected float, got 1
}
function user.IntToBigint(x: int) -> bigint throws never {
  { : int
    x : int
  }
  !! 801..802: type mismatch: expected bigint, got int
}
function user.IntLiteralToBigint() -> bigint throws never {
  { : 1
    1 : 1
  }
  !! 921..922: type mismatch: expected bigint, got 1
}
function user.IntArrayToBigintArray() -> bigint[] throws never {
  { : int[]
    let a = [1, 2] : int[]
    a : int[]
  }
  !! 1060..1061: type mismatch: expected bigint[], got int[]
}
function user.IntLiteralArrayToBigint() -> bigint[] throws never {
  { : bigint[]
    [1, 2] : bigint[]
  }
  !! 1263..1264: type mismatch: expected bigint, got 1
  !! 1266..1267: type mismatch: expected bigint, got 2
}
function user.IntArrayToFloatArray() -> float[] throws never {
  { : int[]
    let a = [1, 2] : int[]
    a : int[]
  }
  !! 1384..1385: type mismatch: expected float[], got int[]
}
function user.NestedIntArrayToBigint() -> bigint[][] throws never {
  { : bigint[][]
    [[1], [2]] : bigint[][]
  }
  !! 1501..1502: type mismatch: expected bigint, got 1
  !! 1506..1507: type mismatch: expected bigint, got 2
}
function user.IntMapToBigintMap() -> map<string, bigint> throws never {
  { : map<string, int>
    let m = map { "a": 1 } : map<string, int>
    m : map<string, int>
  }
  !! 1659..1660: type mismatch: expected map<string, bigint>, got map<string, int>
}
function user.IntMapLiteralToBigint() -> map<string, bigint> throws never {
  { : map<string, bigint>
    map { "a": 1 } : map<string, bigint>
  }
  !! 1812..1813: type mismatch: expected bigint, got 1
}
function user.OptionalIntPlusInt(x: int | null, y: int) -> int throws never {
  { : unknown
    x + y : unknown
  }
  !! 2000..2005: operator `+` cannot be applied to `int | null` and `int`
}
function user.OptionalIntAndInt(x: int | null, y: int) -> int throws never {
  { : unknown
    x & y : unknown
  }
  !! 2134..2139: operator `&` cannot be applied to `int | null` and `int`
}
function user.OptionalIntLtInt(x: int | null, y: int) -> bool throws never {
  { : bool
    x < y : bool
  }
  !! 2393..2398: cannot order `int | null` and `int` with `<`: ordering requires both operands to have the same type
}
function user.OptionalFloatEqBigint(x: float | null, y: bigint) -> bool throws never {
  { : false
    x == y : false
  }
  ?? 2772..2778: `float | null` and `bigint` share no value, so this comparison is always false
}
function user.OptionalFloatLtBigint(x: float | null, y: bigint) -> bool throws never {
  { : bool
    x < y : bool
  }
  !! 2979..2984: cannot order `float | null` and `bigint` with `<`: ordering requires both operands to have the same type
}
class user.BigintHolder {
  count: bigint
}
function user.IntFieldIntoBigintClass() -> user.BigintHolder throws never {
  { : user.BigintHolder
    BigintHolder { count: 1 } : user.BigintHolder
  }
  !! 3312..3313: type mismatch: expected bigint, got 1
}
function user.BigintParamDefaultInt(x: bigint = 0) -> bigint throws never {
  { : bigint
    x : bigint
  }
  !! 3474..3475: type mismatch: expected bigint, got 0
}
class user.BigintHolder$stream {
  count: bigint | null
}
