baml_language/crates/baml_tests/snapshots/diagnostic_errors/numeric_invariance/baml_tests__diagnostic_errors__numeric_invariance__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 41186
---
=== COMPILER2 DIAGNOSTICS ===
  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:10:38]
 10 │ ╭─▶ function IntToFloat(x: int) -> float {
 11 │ │       x
 12 │ ├─▶ }
    · ╰──── expected `float`, found `int`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:15:39]
 15 │ ╭─▶ function IntLiteralToFloat() -> float {
 16 │ │       1
 17 │ ├─▶ }
    · ╰──── expected `float`, found `1`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:21:40]
 21 │ ╭─▶ function IntToBigint(x: int) -> bigint {
 22 │ │       x
 23 │ ├─▶ }
    · ╰──── expected `bigint`, found `int`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:26:41]
 26 │ ╭─▶ function IntLiteralToBigint() -> bigint {
 27 │ │       1
 28 │ ├─▶ }
    · ╰──── expected `bigint`, found `1`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:31:46]
 31 │ ╭─▶ function IntArrayToBigintArray() -> bigint[] {
 32 │ │       let a = [1, 2];
 33 │ │       a
 34 │ ├─▶ }
    · ╰──── expected `bigint[]`, found `int[]`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:39:6]
 39 │     [1, 2]
    ·      ┬
    ·      ╰── expected `bigint`, found `1`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:39:9]
 39 │     [1, 2]
    ·         ┬
    ·         ╰── expected `bigint`, found `2`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:43:44]
 43 │ ╭─▶ function IntArrayToFloatArray() -> float[] {
 44 │ │       let a = [1, 2];
 45 │ │       a
 46 │ ├─▶ }
    · ╰──── expected `float[]`, found `int[]`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:50:7]
 50 │     [[1], [2]]
    ·       ┬
    ·       ╰── expected `bigint`, found `1`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:50:12]
 50 │     [[1], [2]]
    ·            ┬
    ·            ╰── expected `bigint`, found `2`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:54:53]
 54 │ ╭─▶ function IntMapToBigintMap() -> map<string, bigint> {
 55 │ │       let m = {"a": 1};
 56 │ │       m
 57 │ ├─▶ }
    · ╰──── expected `map<string, bigint>`, found `map<string, int>`
    ╰────

  [type] E0001

  × mismatched types
    ╭─[numeric_invariance.baml:61:11]
 61 │     {"a": 1}
    ·           ┬
    ·           ╰── expected `bigint`, found `1`
    ╰────

  [type] E0004

  × operator `+` cannot be applied to `int | null` and `int`
    ╭─[numeric_invariance.baml:67:5]
 67 │     x + y
    ·     ─────
    ╰────

  [type] E0004

  × operator `&` cannot be applied to `int | null` and `int`
    ╭─[numeric_invariance.baml:72:5]
 72 │     x & y
    ·     ─────
    ╰────

  [type] E0001

  × mismatched types
     ╭─[numeric_invariance.baml:101:27]
 101 │     BigintHolder { count: 1 }
     ·                           ┬
     ·                           ╰── expected `bigint`, found `1`
     ╰────

  [type] E0001

  × mismatched types
     ╭─[numeric_invariance.baml:106:44]
 106 │ function BigintParamDefaultInt(x: bigint = 0) -> bigint {
     ·                                            ┬
     ·                                            ╰── expected `bigint`, found `0`
     ╰────
